# fix8

./: .gitignore  README.md  pyproject.toml  setup.cfg  teste.py
script/: dev.py
src/: __init__.py  core.py  fix.py  rules.txt  test.py
src/fix8/: cli.py  fixer.py  patches.py  runner.py
tests/: testes.py
