[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fixer8"
version = "0.1.1"
description = "Automatic Flake8 fixer for Python projects"
readme = "README.md"
requires-python = ">=3.8"
authors = [
        { name="manuelcyrus", email="manuelcyrus.mda@gmail.com" }
]

[project.scripts]
fix8 = "fix8.cli:main"

[tool.setuptools.packages.find]
where = ["src"]