[metadata]
name = fixer8
version = 0.1.0
description = Automatic Flake8 fixer for Python projects
author = Manuel Cyrus
author_email = manuelcyrus.mda@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
python_requires = >=3.8

[options]
packages = find:
package_dir =
    = src
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    fix8 = fix8.cli:main